--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    background-color: paleturquoise;
+}
 .ul {
     list-style-type: none;
     margin: 0;
@@ -5,10 +8,37 @@
     overflow: hidden;
     background-color: lightgray;
 }
+.about1{
+    text-decoration-color: green;
+    text-decoration-style: wavy;
+}
 .about{
-    text-align: center;
+    text-align: left;
 
 }  
 .abouts{
     background-color:grey;
+}
+.aboutpng{
+    align-items: center;
+    border-color: greenyellow;
+    border-style: solid;
+    height: 40px;
+
+}
+.title1{
+    text-align: justify;
+    text-shadow: goldenrod;
+    
+}
+.titlelogo{
+    align-items: center;
+    text-indent: justify;
+}
+.lemar1{
+    border-image: 52%;
+    align-items: center;
+    height: 300px;
+    width: 400px;
+    
 }
